--- a/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_social-sharer.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_social-sharer.scss
@@ -13,6 +13,10 @@
 	@media #{$medium} {
 		top: $large-topbar-height;
 	}
+
+	@media print {
+		display: none;
+	}
 }
 .sharer-block-container.active{
 	padding-bottom: 0.5em;
